@@ -496,3 +496,6 @@
 2016-01-17 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the library version to 7:1:4.
 	* Incremented the package version to 0.11.10.
+2016-01-26 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a fencepost error in processing serial numbers for
+	multicast GPIO messages in 'sy/sygpio_server.cpp'.
